--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class=""></div>
+    <div id="root" class="">
+      
+    </div>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
